[package]
name = "redis-streams-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde", "max_level_trace", "release_max_level_trace"] }

# A full featured, fast Command Line Argument Parser for Rust
# https://github.com/clap-rs/clap
clap = { version = "3.0.1", features = ["derive"] }

axum = "0.4.3"
axum-extra = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "filter"] }
hyper = { version = "0.14", features = ["full"] }

# A small macro for defining lazy evaluated static variables in Rust.
# https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.4.0"

# Redis library for rust
# https://github.com/sfackler/r2d2
# https://github.com/mitsuhiko/redis-rs
redis = { version = "0.19.0", features = ["tokio-comp", "r2d2", "streams"], default-features = false }
