[package]
name = "redis-streams-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A full featured, fast Command Line Argument Parser for Rust
# https://github.com/clap-rs/clap
clap = { version = "3.2", features = ["derive"] }

axum = "0.4.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }

# A small macro for defining lazy evaluated static variables in Rust.
# https://github.com/rust-lang-nursery/lazy-static.rs
lazy_static = "1.4"

# Redis library for rust
# https://github.com/mitsuhiko/redis-rs
redis = { version = "0.21", features = ["tokio-comp", "streams"], default-features = false }
